# scribec-rs

./: Cargo.toml  README.md
misc/: fb303.thrift  scribe.thrift
src/: client.rs  fb303.rs  lib.rs  scribe.rs
src/cmd/: main.rs
src/scribec/: main.rs
