[package]
name = "scribec"
version = "0.1.0"
authors = ["everpcpc <git@everpcpc.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "A client library for Facebook Scribe Server."
readme = "README.md"
keywords = ["scribe", "aggregation", "thrift"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "scribec"
path = "src/cmd/main.rs"

[dependencies]
# anyhow = "1.0"
argh = "0.1.7"
thrift = "0.15.0"
